# gterm

./: .gitlab-ci.yml  .travis.yml  README  README.md  gcfg.c  gcfg.h  gload.1  gload.c  gterm.1  gterm.c  gterm.conf.example  gterm.desktop  gterm.spec  meson.build
.github/workflows/: build.yaml
